# rust-musl-memory-leak

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  run-musl-docker.bash
src/: main.rs
